added vehicle feature and passing test

--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,6 +1,6 @@
 <% if @manufacturer.errors.any? %>
   <% @manufacturer.errors.full_messages.each do |msg| %>
-    <%= msg %>
+    <li><%= msg %></li>
   <% end %>
 <% end %>
 
