--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,3 +1,8 @@
+<% if @vehicle.errors.any? %>
+  <% @vehicle.errors.full_messages.each do |msg| %>
+    <%= msg %>
+  <%end%>
+<%end%>
 
 <%= form_for @vehicle do |f| %>
   <%= f.label :color, "Color" %>
@@ -10,7 +15,7 @@
   <%= f.text_field :mileage %>
 
   <%= f.label :manufacturer_id%>
-  <%= f.collection_select(:manufacturer_id, Manufacturer.all, :id, :name) %>
+  <%= f.collection_select(:manufacturer_id, Manufacturer.all, :id, :name, include_blank: true) %>
 
   <%= f.label :description, "Description" %>
   <%= f.text_area :description %>
