--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,5 +1,9 @@
+<h3>Click here to add a new <a href="/vehicles/new">vehicle</a></h3>
+
 <% @vehicles.each do |vehicle| %>
   <li><h3>Year:<%= vehicle.year %> - Color:<%= vehicle.color %> </h3>
   <h3>Mileage: <%= vehicle.mileage %> - Manufacturer: <%= vehicle.manufacturer.name %></h3>
   <p><%= vehicle.description %></p></li>
 <% end %>
+
+<%= link_to "Back", root_path %>
