--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -1,3 +1,7 @@
+<h3>Click here to add a new <a href="/manufacturers/new">manufacturer</a></h3>
+
 <% @manufacturers.each do |manufacturer| %>
   <li><h3><%= manufacturer.name %> - <%= manufacturer.country %> </h3></li>
 <% end %>
+
+<%= link_to "Back", root_path %>
